# homework_21_2

./: catalog.html  category_1.html  contacts.html  main.html  pyproject.toml
data/: style.css
html/: catalog.html  category_1.html  contacts.html  main.html
src/: web_app.py
